--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,42 @@
 <div *ngIf="loading">
-  Loading...
+  <div class="fixed inset-0 text-white flex flex-col justify-center items-center bg-gray-900">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-full" viewBox="0 0 45 45" stroke="#fff">
+      <g fill="none" fill-rule="evenodd" transform="translate(1 1)" stroke-width="2">
+        <circle cx="22" cy="22" r="6" stroke-opacity="0">
+          <animate attributeName="r" begin="1.5s" dur="3s" values="6;22" calcMode="linear" repeatCount="indefinite" />
+          <animate attributeName="stroke-opacity" begin="1.5s" dur="3s" values="1;0" calcMode="linear"
+            repeatCount="indefinite" />
+          <animate attributeName="stroke-width" begin="1.5s" dur="3s" values="2;0" calcMode="linear"
+            repeatCount="indefinite" />
+        </circle>
+        <circle cx="22" cy="22" r="6" stroke-opacity="0">
+          <animate attributeName="r" begin="3s" dur="3s" values="6;22" calcMode="linear" repeatCount="indefinite" />
+          <animate attributeName="stroke-opacity" begin="3s" dur="3s" values="1;0" calcMode="linear"
+            repeatCount="indefinite" />
+          <animate attributeName="stroke-width" begin="3s" dur="3s" values="2;0" calcMode="linear"
+            repeatCount="indefinite" />
+        </circle>
+        <circle cx="22" cy="22" r="8">
+          <animate attributeName="r" begin="0s" dur="1.5s" values="6;1;2;3;4;5;6" calcMode="linear"
+            repeatCount="indefinite" />
+        </circle>
+      </g>
+    </svg>
+    <span>Loading...</span>
+  </div>
 </div>
 <div *ngIf="error">
-  Error :(
+  <div class="fixed inset-0 text-white flex flex-col justify-center items-center bg-gray-900">
+    <span>Error :(</span>
+  </div>
 </div>
 
 <div *ngIf="theme">
-  <div class="flex">
+  <div class="flex overflow-hidden relative">
     <div class="w-1/2 border-r-2 border-gray-500">
       <app-playground [theme]="theme"></app-playground>
     </div>
-    <div class="w-1/2">
+    <div class="w-1/2 overflow-y-auto relative max-h-screen">
       <app-landing [query]="theme.landingQuery" [stringTemplate]="theme.landingTemplate"></app-landing>
       <app-articles [query]="theme.articlesQuery" [stringTemplate]="theme.articlesTemplate"></app-articles>
       <app-article [query]="theme.articleQuery" [stringTemplate]="theme.articleTemplate"></app-article>
