--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -1,10 +1,10 @@
-<div class="flex flex-col  font-mono">
+<div class="flex flex-col font-mono relative">
   <button
-    class="z-50 bg-red-500 absolute left-0 bottom-0 m-6  ml-12 transform -translate-y-8 px-3 py-2 rounded-md font-bold text-white"
+    class="z-50 bg-green-500 absolute hover:bg-green-600 transition-all duration-500 right-0 top-0 transform rounded-none px-4 py-1 font-bold text-white"
     (click)="saveTheme()">Save theme
   </button>
   <div class="shadow-lg border-r-2 border-gray-600 left-0 top-0 bottom-0 absolute w-64 p-6 bg-gray-900 text-white font-mono z-40 transform duration-1000 transition-all -translate-x-56 hover:translate-x-0">
-    <div class="absolute right-0 top-0 transform translate-x-12 bg-orange-500 px-6 py-1 uppercase">
+    <div class="absolute right-0 top-0 transform translate-x-12 bg-orange-500 px-6 py-1 font-bold">
       Menu
     </div>
     <h1 class="font-bold mb-12">{{theme.name}} by <small>{{theme.author.username}}</small></h1>
@@ -45,7 +45,7 @@
       </div>
     </div>
   </div>
-  <div class="w-full pt-8 bg-gray-900 border-t border-gray-700 pl-6 h-screen">
+  <div class="w-full pt-8 bg-gray-900  pl-6 h-screen">
     <ngx-monaco-editor style="height: 100%; width: 100%;" [options]="editorOptions" [(ngModel)]="code"></ngx-monaco-editor>
   </div>
 </div>
