--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,12 +32,12 @@
 </div>
 
 <div *ngIf="theme" class="overflow-hidden relative max-h-screen">
-  <div class="relative flex items-center justify-between px-6 top-0 left-0 right-0 bg-gray-900 py-1 z-50 border-b border-gray-700">
+  <div class="relative flex items-center justify-between px-3 top-0 left-0 right-0 bg-gray-900 py-1 z-50 border-b border-gray-700">
     <h3 class="font-mono w-64 flex justify-start items-center font-bold text-2xl text-white">
       Kush<span class="opacity-50">Team</span>
       <span class="mx-3 bg-indigo-700 text-xs px-3 py-1 rounded-md">Dev</span>
     </h3>
-    <a href="https://www.buymeacoffee.com/kushteam"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=kushteam&button_colour=FFDD00&font_colour=000000&font_family=Cookie&outline_colour=000000&coffee_colour=ffffff"></a>
+    <a class="transform  top-0 right-0 translate-x-8 scale-75" href="https://www.buymeacoffee.com/kushteam"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=kushteam&button_colour=FFDD00&font_colour=000000&font_family=Cookie&outline_colour=000000&coffee_colour=ffffff"></a>
   </div>
   <div class="flex overflow-hidden relative">
     <div class="w-1/2 border-r-2 border-gray-500">
