--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -5,7 +5,7 @@
   </button>
   <div class="shadow-lg border-r-2 border-gray-600 left-0 top-0 bottom-0 absolute w-64 p-6 bg-gray-900 text-white font-mono z-40 transform duration-1000 transition-all -translate-x-56 hover:translate-x-0">
     <div class="absolute right-0 top-0 transform translate-x-12 bg-orange-500 px-6 py-1 font-bold">
-      Menu
+      Data
     </div>
     <h1 class="font-bold mb-12">{{theme.name}} by <small>{{theme.author.username}}</small></h1>
     <div class="space-y-3">
