--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -3,41 +3,44 @@
     class="z-50 bg-green-500 absolute hover:bg-green-600 transition-all duration-500 right-0 top-0 transform rounded-none px-4 py-1 font-bold text-white"
     (click)="saveTheme()">Save theme
   </button>
-  <div class="shadow-lg border-r-2 border-gray-600 left-0 top-0 bottom-0 absolute w-64 p-6 bg-gray-900 text-white font-mono z-40 transform duration-1000 transition-all -translate-x-56 hover:translate-x-0">
-    <div class="absolute right-0 top-0 transform translate-x-12 bg-orange-500 px-6 py-1 font-bold">
+  <div class="shadow-lg delay-150 border-r-2 border-orange-500 left-0 pt-2 top-0 bottom-0 absolute w-64  bg-gray-900 text-white font-mono z-40 transform duration-1000 transition-all -translate-x-56 hover:translate-x-0">
+    <div class="absolute right-0 top-0 transform translate-x-16 bg-orange-500 px-6 py-1 font-bold flex">
+      <span class="transform transition-all inline-block rotate-90 font-sans mr-2">
+        III
+      </span>
       Data
     </div>
-    <h1 class="font-bold mb-12">{{theme.name}} by <small>{{theme.author.username}}</small></h1>
-    <div class="space-y-3">
+    <h1 class="font-bold mb-12 pl-4">{{theme.name}} by <small>{{theme.author.username}}</small></h1>
+    <div class="space-y-3 text-sm">
       <div>
-        <h4 class="my-6 font-bold">Querys</h4>
+        <h4 class="my-6 font-bold pl-4">Querys</h4>
         <div class=" space-y-3">
-          <div class="border-b-2 border-gray-700 hover:opacity-50 cursor-pointer"
+          <div class="pl-4 border-b border-orange-500 hover:text-orange-300 font-bold cursor-pointer"
             (click)="setFile('landingQuery', 'graphql')">
             landing<span class="text-orange-500">.graphql</span>
           </div>
-          <div class="border-b-2 border-gray-700 hover:opacity-50 cursor-pointer"
+          <div class="pl-4 border-b border-orange-500 hover:text-orange-300 font-bold cursor-pointer"
             (click)="setFile('articlesQuery', 'graphql')">
             articles<span class="text-orange-500">.graphql</span>
           </div>
-          <div class="border-b-2 border-gray-700 hover:opacity-50 cursor-pointer"
+          <div class="pl-4 border-b border-orange-500 hover:text-orange-300 font-bold cursor-pointer"
             (click)="setFile('articleQuery', 'graphql')">
             article<span class="text-orange-500">.graphql</span>
           </div>
         </div>
       </div>
       <div class="mt-3">
-        <h4 class="my-12 mb-3 font-bold">Templates</h4>
+        <h4 class="my-12 mb-3 pl-4 font-bold">Templates</h4>
         <div class="space-y-3">
-          <div class="border-b-2 border-gray-700 hover:opacity-50 cursor-pointer"
+          <div class="pl-4 border-b border-blue-500 hover:text-blue-300 font-bold cursor-pointer"
             (click)="setFile('landingTemplate', 'html')">
             landing<span class="text-blue-500">.html</span>
           </div>
-          <div class="border-b-2 border-gray-700 hover:opacity-50 cursor-pointer"
+          <div class="pl-4 border-b border-blue-500 hover:text-blue-300 font-bold cursor-pointer"
             (click)="setFile('articlesTemplate', 'html')">
             articles<span class="text-blue-500">.html</span>
           </div>
-          <div class="border-b-2 border-gray-700 hover:opacity-50 cursor-pointer"
+          <div class="pl-4 border-b border-blue-500 hover:text-blue-300 font-bold cursor-pointer"
             (click)="setFile('articleTemplate', 'html')">
             article<span class="text-blue-500">.html</span>
           </div>
@@ -45,7 +48,7 @@
       </div>
     </div>
   </div>
-  <div class="w-full pt-8 bg-gray-900  pl-6 h-screen">
+  <div class="w-full pt-8 bg-gray-900  pl-6 h-screen" style="padding-top: 2.2rem;  background: #1e1e1e;">
     <ngx-monaco-editor style="height: 100%; width: 100%;" [options]="editorOptions" [(ngModel)]="code"></ngx-monaco-editor>
   </div>
 </div>
