Playground service, called by templates

--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,1 +1,1 @@
-<ng-container *compile="stringTemplate; context: { articles: articles }"></ng-container>
+<ng-container *compile="stringTemplate; context: { setFile: this.setFile, articles: articles }"></ng-container>
