--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -1,1 +1,1 @@
-<ng-container *compile="stringTemplate; context: { article: article }"></ng-container>
+<ng-container *compile="stringTemplate; context: { setFile: this.setFile, article: article }"></ng-container>
