--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col font-mono relative">
-  <button
+  <button *ngIf="storageService.isAuthenticated()"
     class="z-50 bg-green-500 absolute hover:bg-green-600 transition-all duration-500 right-0 top-0 transform rounded-none px-4 py-1 font-bold text-white"
     (click)="saveTheme()">Save theme
   </button>
