--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -5,7 +5,7 @@
     >
     <input matInput type="password" formControlName="password" autocomplete="current-password" required
       class="appearance-none bg-transparent border-none w-full text-gray-700 mr-3 py-1 px-2 leading-tight focus:outline-none"
-      placeholder="Contraseña">
+      placeholder="Password">
 
     <button mat-raised-button type="submit" form="login-form" [disabled]="!loginForm.valid"
       class="flex-shrink-0 bg-green-800 hover:bg-green-700 border-green-800 hover:border-green-700 text-sm border-4 text-white py-1 px-2 rounded">
