--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -34,7 +34,7 @@
   </div>
   <div class="flex overflow-hidden relative">
     <div class="w-1/2 border-r-2 border-green-500">
-      <app-playground [theme]="theme"></app-playground>
+      <app-playground [(theme)]="theme" [themes]="themeList"></app-playground>
     </div>
     <div class="w-1/2 overflow-y-auto relative max-h-screen relative">
       <app-landing [query]="theme.landingQuery" [stringTemplate]="theme.landingTemplate"></app-landing>
