--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -1,8 +1,14 @@
 <div class="flex flex-col font-mono relative">
-  <button *ngIf="storageService.isAuthenticated()"
+  <button *ngIf="storageService.isAuthenticated() && storageService.getCurrentUser().id == theme.author.id"
     class="z-50 bg-green-500 absolute hover:bg-green-600 transition-all duration-500 right-0 top-0 transform rounded-none px-4 py-1 font-bold text-white"
-    (click)="saveTheme()">Save theme
+    (click)="saveTheme()">Save
   </button>
+
+  <button *ngIf="storageService.isAuthenticated() && storageService.getCurrentUser().id != theme.author.id"
+    class="z-50 bg-green-500 absolute hover:bg-green-600 transition-all duration-500 right-0 top-0 transform rounded-none px-4 py-1 font-bold text-white"
+    (click)="cloneTheme()">Clone
+  </button>
+
   <div class="shadow-lg delay-150 border-r-2 border-orange-500 left-0 pt-2 top-0 bottom-0 absolute w-64  bg-gray-900 text-white font-mono z-40 transform duration-1000 transition-all -translate-x-56 hover:translate-x-0">
     <div class="absolute right-0 top-0 transform translate-x-16 bg-orange-500 px-6 py-1 font-bold flex">
       <span class="transform transition-all inline-block rotate-90 font-sans mr-2">
@@ -10,7 +16,13 @@
       </span>
       Data
     </div>
-    <h1 class="font-bold mb-12 pl-4">{{theme.name}} by <small>{{theme.author.username}}</small></h1>
+    <h1>
+      <label class="block mt-4">
+        <select class="form-select mt-1 block w-full bg-gray-900" [(ngModel)]="themeID" (change)="themeSelected()">
+          <option *ngFor="let t of themes" [value]="t.id">{{t.name}} by <small>{{t.author.username}}</small></option>
+        </select>
+      </label>
+    </h1>
     <div class="space-y-3 text-sm">
       <div>
         <h4 class="my-6 font-bold pl-4">Querys</h4>
