--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,6 +23,8 @@
   <div
     class="relative flex items-center justify-between px-3 top-0 left-0 right-0 bg-gray-900 py-1 z-50 border-b border-gray-800">
     <h3 class="font-mono flex justify-start items-center font-bold text-2xl text-white">
+      <a class="px-2" href="https://github.com/kush-team" target="_blank"><img
+          src="assets/GitHub-Mark-Light-32px.png" /></a>
       Kush<span class="opacity-50">Team</span>
       <span class="mx-2 bg-indigo-700 text-sm px-2 py-1 rounded-md">.dev</span>
     </h3>
