--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,11 +28,10 @@
       Kush<span class="opacity-50">Team</span>
       <span class="mx-2 bg-indigo-700 text-sm px-2 py-1 rounded-md">.dev</span>
     </h3>
-    <a class="transform  top-0 right-0 translate-x-8 scale-75" target="_blank" rel="noopener noreferrer"
-    href="https://www.buymeacoffee.com/kushteam"><img
-    src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=kushteam&button_colour=FFDD00&font_colour=000000&font_family=Cookie&outline_colour=000000&coffee_colour=ffffff"></a>
+
     <app-login *ngIf="!storageService.isAuthenticated()"></app-login>
-    <a *ngIf="storageService.isAuthenticated()" (click)="storageService.logout()">Logout </a>
+    <a class="text-white cursor-pointer hover:opacity-50 font-bold" *ngIf="storageService.isAuthenticated()"
+      (click)="storageService.logout()">Logout </a>
   </div>
   <div class="flex overflow-hidden relative">
     <div class="w-1/2 border-r-2 border-green-500">
