--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -9,7 +9,7 @@
     (click)="cloneTheme()">Clone
   </button>
 
-  <div class="shadow-lg delay-150 border-r-2 border-orange-500 left-0 pt-2 top-0 bottom-0 absolute w-64  bg-gray-900 text-white font-mono z-40 transform duration-1000 transition-all -translate-x-56 hover:translate-x-0">
+  <div class="shadow-lg  delay-150 border-r-2 border-orange-500 left-0 pt-2 top-0 bottom-0 absolute w-64  bg-gray-900 text-white font-mono z-40 transform duration-1000 transition-all -translate-x-56 hover:translate-x-0">
     <div class="absolute right-0 top-0 transform translate-x-16 bg-orange-500 px-6 py-1 font-bold flex">
       <span class="transform transition-all inline-block rotate-90 font-sans mr-2">
         III
@@ -17,7 +17,7 @@
       Data
     </div>
     <h1>
-      <label class="block mt-4">
+      <label class="block mt-12 px-4">
         <select class="form-select mt-1 block w-full bg-gray-900" [(ngModel)]="themeID" (change)="themeSelected()">
           <option *ngFor="let t of themes" [value]="t.id">{{t.name}} by <small>{{t.author.username}}</small></option>
         </select>
@@ -41,7 +41,7 @@
           </div>
         </div>
       </div>
-      <div class="mt-3">
+      <div class="mt-3 mb-3">
         <h4 class="my-12 mb-3 pl-4 font-bold">Templates</h4>
         <div class="space-y-3">
           <div class="pl-4 border-b border-blue-500 hover:text-blue-300 font-bold cursor-pointer"
@@ -58,6 +58,9 @@
           </div>
         </div>
       </div>
+      <a class="relative block ml-2 pt-6" target="_blank" rel="noopener noreferrer"
+      href="https://www.buymeacoffee.com/kushteam"><img
+        src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=kushteam&button_colour=FFDD00&font_colour=000000&font_family=Cookie&outline_colour=000000&coffee_colour=ffffff"></a>
     </div>
   </div>
   <div class="w-full pt-8 bg-gray-900  pl-6 h-screen" style="padding-top: 2.2rem;  background: #1e1e1e;">
