--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -4,7 +4,7 @@
     (click)="saveTheme()">Save
   </button>
 
-  <button *ngIf="storageService.isAuthenticated() && storageService.getCurrentUser().id != theme.author.id"
+  <button *ngIf="storageService.isAuthenticated()"
     class="z-50 bg-green-500 absolute hover:bg-green-600 transition-all duration-500 right-0 top-0 transform rounded-none px-4 py-1 font-bold text-white"
     (click)="cloneTheme()">Clone
   </button>
