--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -64,6 +64,6 @@
     </div>
   </div>
   <div class="w-full pt-8 bg-gray-900 pl-6 h-screen" style="padding-top: 2.2rem; background: #1e1e1e;">
-    <ngx-monaco-editor style="height:90%; width: 100%;" [options]="editorOptions" [(ngModel)]="code"></ngx-monaco-editor>
+    <ngx-monaco-editor style="height:90%; width: 100%;" [options]="editorOptions" [(ngModel)]="code"  automaticLayout=true></ngx-monaco-editor>
   </div>
 </div>
