--- a/src/app/landing/landing.component.html
+++ b/src/app/landing/landing.component.html
@@ -1,1 +1,1 @@
-<ng-container *compile="stringTemplate; context: { }"></ng-container>
+<ng-container *compile="stringTemplate; context: { setFile: this.setFile }"></ng-container>
