--- a/src/app/articles/articles.component.html
+++ b/src/app/articles/articles.component.html
@@ -1,1 +1,10 @@
-<ng-container *compile="stringTemplate; context: { setFile: this.setFile, setArticle: this.setArticle, articles: articles }"></ng-container>
+<ng-container
+  *compile="
+    stringTemplate;
+    context: {
+      setFile: this.setFile,
+      setArticle: this.setArticle,
+      articles: articles
+    }
+  "
+></ng-container>
