--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,11 @@
 <div *ngIf="loading">
-  <div
-    class="fixed inset-0 text-white flex flex-col justify-center items-center bg-gray-900"
-  >
-    <svg
-      xmlns="http://www.w3.org/2000/svg"
-      class="h-12 w-full mb-2"
-      stroke="#fff"
-      viewBox="0 0 38 38"
-    >
-      <g
-        transform="translate(1 1)"
-        stroke-width="2"
-        fill="none"
-        fill-rule="evenodd"
-      >
+  <div class="fixed inset-0 text-white flex flex-col justify-center items-center bg-gray-900">
+    <svg xmlns="http://www.w3.org/2000/svg" class="h-12 w-full mb-2" stroke="#fff" viewBox="0 0 38 38">
+      <g transform="translate(1 1)" stroke-width="2" fill="none" fill-rule="evenodd">
         <circle stroke-opacity=".5" cx="18" cy="18" r="18" />
         <path d="M36 18c0-9.94-8.06-18-18-18">
-          <animateTransform
-            attributeName="transform"
-            type="rotate"
-            from="0 18 18"
-            to="360 18 18"
-            dur="1s"
-            repeatCount="indefinite"
-          />
+          <animateTransform attributeName="transform" type="rotate" from="0 18 18" to="360 18 18" dur="1s"
+            repeatCount="indefinite" />
         </path>
       </g>
       <style id="stylus-1" type="text/css"></style>
@@ -32,109 +14,46 @@
   </div>
 </div>
 <div *ngIf="error">
-  <div
-    class="fixed inset-0 text-white flex flex-col justify-center items-center bg-gray-900"
-  >
+  <div class="fixed inset-0 text-white flex flex-col justify-center items-center bg-gray-900">
     <span>Error :(</span>
   </div>
 </div>
 
 <div *ngIf="theme" class="overflow-hidden relative max-h-screen">
-  <div
-    class="relative flex items-center justify-start px-3 top-0 left-0 right-0 bg-gray-900 py-1 z-50 border-b border-gray-800"
-  >
-    <h3
-      class="font-mono flex justify-start items-center font-bold text-xl text-white"
-    >
-      <a class="px-2" href="https://github.com/kush-team" target="_blank"
-        ><img src="assets/GitHub-Mark-Light-32px.png"
-      /></a>
-      Kush<span class="opacity-50">Team</span>
-      <span class="mx-2 bg-indigo-700 text-sm px-2 py-1 rounded-md">.dev</span>
-    </h3>
-
-    <div
-      class="flex-1 flex items-center justify-end mr-6 border-r border-gray-700 pr-5"
-    >
-      <button
-        (click)="openCodeEditor()"
-        class="opacity-50 w-5 h-5 mr-2 hover:opacity-100 transition-all duration-500 transform outline-none"
-        [ngClass]="{
+  <div class="absolute flex items-center justify-center w-full px-4 bottom-0 right-0 py-1 z-50 border-b border-gray-800"
+    style="background: rgba(0, 0, 0, .5)">
+    <span class="font-mono text-white mr-4">KushTeam.dev</span>
+    <div class="flex-1 flex items-center justify-end py-2 ">
+      <button (click)="openCodeEditor()"
+        class="opacity-75 w-5 h-5 mr-5 hover:opacity-100 transition-all duration-500 transform outline-none" [ngClass]="{
           'opacity-100': isOpen
-        }"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          overflow="visible"
-          viewBox="0 0 62.3 62.3"
-        >
-          <path
-            d="M9 2h44.2c4 0 7.1 3.2 7.1 7v44.2c0 4-3.2 7.1-7 7.1H9a7 7 0 01-7.1-7V9C2 5 5.2 2 9 2z"
-            fill="none"
-            stroke="#fff"
-            stroke-width="4"
-            stroke-miterlimit="10"
-          />
-          <path
-            d="M31.2 60.3V2h22c4 0 7.1 3.2 7.1 7v44.2c0 4-3.2 7.1-7 7.1H31.1z"
-            fill="#fff"
-          />
+        }">
+        <svg xmlns="http://www.w3.org/2000/svg" overflow="visible" viewBox="0 0 62.3 62.3">
+          <path d="M9 2h44.2c4 0 7.1 3.2 7.1 7v44.2c0 4-3.2 7.1-7 7.1H9a7 7 0 01-7.1-7V9C2 5 5.2 2 9 2z" fill="none"
+            stroke="#f9f9f9" stroke-width="4" stroke-miterlimit="10" />
+          <path d="M31.2 60.3V2h22c4 0 7.1 3.2 7.1 7v44.2c0 4-3.2 7.1-7 7.1H31.1z" fill="#f9f9f9" />
         </svg>
       </button>
-      <button
-        (click)="closeCodeEditor()"
-        class="w-5 h-5 opacity-50 hover:opacity-100 transition-all duration-500 transform outline-none"
-        [ngClass]="{
+      <button (click)="closeCodeEditor()"
+        class="w-5 h-5 opacity-50 hover:opacity-100 transition-all duration-500 transform outline-none" [ngClass]="{
           'opacity-100': !isOpen
-        }"
-      >
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          overflow="visible"
-          viewBox="0 0 62.3 62.3"
-        >
-          <path
-            d="M53.2 60.3H9.1a7 7 0 01-7.1-7V9C2 5 5.2 2 9 2h44.2c4 0 7.1 3.2 7.1 7v44.2c0 4-3.1 7.1-7 7.1z"
-            fill="#fff"
-            stroke="#fff"
-            stroke-width="4"
-            stroke-miterlimit="10"
-          />
+        }">
+        <svg xmlns="http://www.w3.org/2000/svg" overflow="visible" viewBox="0 0 62.3 62.3">
+          <path d="M53.2 60.3H9.1a7 7 0 01-7.1-7V9C2 5 5.2 2 9 2h44.2c4 0 7.1 3.2 7.1 7v44.2c0 4-3.1 7.1-7 7.1z"
+            fill="#f9f9f9" stroke="#f9f9f9" stroke-width="4" stroke-miterlimit="10" />
         </svg>
       </button>
     </div>
-
-    <app-login *ngIf="!storageService.isAuthenticated()"></app-login>
-    <a
-      class="text-white cursor-pointer hover:opacity-50 font-bold"
-      *ngIf="storageService.isAuthenticated()"
-      (click)="storageService.logout()"
-      >Logout
-    </a>
   </div>
-  <div class="flex w-full h-screen overflow-hidden relative">
-    <as-split
-      direction="horizontal"
-      (dragEnd)="splitResize($event)"
-      [gutterSize]=4
-      [useTransition]=true
-    >
+  <div class="flex w-full h-screen overflow-hidden relative" >
+    <as-split direction="horizontal" (dragEnd)="splitResize($event)" [gutterSize]=4 [useTransition]=true>
       <as-split-area [size]="codeSize">
         <app-playground [theme]="theme" [themes]="themeList"></app-playground>
       </as-split-area>
       <as-split-area [size]="siteSize">
-        <app-landing
-          [query]="theme.landingQuery"
-          [stringTemplate]="theme.landingTemplate"
-        ></app-landing>
-        <app-articles
-          [query]="theme.articlesQuery"
-          [stringTemplate]="theme.articlesTemplate"
-        ></app-articles>
-        <app-article
-          [query]="theme.articleQuery"
-          [stringTemplate]="theme.articleTemplate"
-        ></app-article>
+        <app-landing [query]="theme.landingQuery" [stringTemplate]="theme.landingTemplate"></app-landing>
+        <app-articles [query]="theme.articlesQuery" [stringTemplate]="theme.articlesTemplate"></app-articles>
+        <app-article [query]="theme.articleQuery" [stringTemplate]="theme.articleTemplate"></app-article>
       </as-split-area>
     </as-split>
   </div>
