--- a/src/app/playground/playground.component.html
+++ b/src/app/playground/playground.component.html
@@ -1,115 +1,101 @@
-<div class="flex flex-col font-mono relative">
-  <button
-    *ngIf="
+<div class="flex font-mono relative">
+  <div class="absolute right-0 bottom-0 flex justify-end pb-2 items-center z-50 w-full left-0">
+    <button *ngIf="storageService.isAuthenticated()"
+      class="bg-indigo-700 hover:bg-indigo-600 items-center transition-all duration-500 right-0 top-0 transform rounded-sm text-xs flex mr-3 px-4 pr-2 py-1 font-bold text-white"
+      (click)="cloneTheme()">
+      Clone
+      <svg class="w-5 ml-1 h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+        stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+          d="M8 16H6a2 2 0 01-2-2V6a2 2 0 012-2h8a2 2 0 012 2v2m-6 12h8a2 2 0 002-2v-8a2 2 0 00-2-2h-8a2 2 0 00-2 2v8a2 2 0 002 2z" />
+      </svg>
+    </button>
+    <button *ngIf="
       storageService.isAuthenticated() &&
       storageService.getCurrentUser().id == theme.author.id
-    "
-    class="z-50 bg-green-500 absolute hover:bg-green-600 -translate-x-20 transition-all duration-500 right-0 top-0 transform rounded-none px-4 py-1 font-bold text-white"
-    (click)="saveTheme()"
-  >
-    Save
-  </button>
-
-  <button
-    *ngIf="storageService.isAuthenticated()"
-    class="z-50 bg-indigo-500 absolute hover:bg-indigo-600 transition-all duration-500 right-0 top-0 transform rounded-none px-4 py-1 font-bold text-white"
-    (click)="cloneTheme()"
-  >
-    Clone
-  </button>
-
+    " class="bg-green-700 hover:bg-green-600 items-center transition-all duration-500 right-0 top-0 transform rounded-sm text-xs flex mr-3 px-4 pr-2 py-1 font-bold text-white"
+      (click)="saveTheme()">
+      Save
+      <svg class="w-5 ml-1 h-5" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
+        stroke="currentColor">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+      </svg>
+    </button>
+  </div>
   <div
-    class="shadow-lg delay-150 border-r-2 border-orange-500 left-0 pt-2 top-0 bottom-0 absolute w-64 bg-gray-900 text-white font-mono z-40 transform duration-1000 transition-all -translate-x-56 hover:translate-x-0"
-  >
-    <div
-      class="absolute right-0 top-0 transform translate-x-16 bg-orange-500 px-6 py-1 font-bold flex"
-    >
-      <span
-        class="transform transition-all inline-block rotate-90 font-sans mr-2"
-      >
-        III
-      </span>
-      Data
+    class="shadow-lg delay-100 border-r-2 border-gray-800 left-0 w-64 transform bg-gray-900 text-white font-mono z-40 h-screen relative duration-200 transition-all overflow-y-auto overflow-x-hidden">
+    <div class="w-full flex left-0">
+      <a class="text-gray-500 cursor-pointer w-full bg-gray-700 text-center hover:bg-gray-900 text-xs py-1 font-bold"
+        *ngIf="storageService.isAuthenticated()" (click)="storageService.logout()">Logout
+      </a>
+      <app-login *ngIf="!storageService.isAuthenticated()"></app-login>
     </div>
-    <h1>
-      <label class="block mt-12 px-4">
-        <select
-          class="form-select mt-1 block w-full bg-gray-900"
-          [(ngModel)]="themeID"
-          (change)="themeSelected()"
-        >
+    <div class="border-b bg-gray-800 border-gray-800">
+      <label class="block pt-3 pb-4 px-1">
+        <small class="text-xs opacity-50 px-1">Select template</small>
+        <select class="form-select px-1 mt-1 text-sm py-1 block w-full bg-gray-700" [(ngModel)]="themeID"
+          (change)="themeSelected()">
           <option *ngFor="let t of themes" [value]="t.id">
-            {{ t.name }} by <small>{{ t.author.username }}</small>
+            {{ t.name }}
           </option>
         </select>
       </label>
-    </h1>
-    <div class="space-y-3 text-sm">
+    </div>
+    <div class="space-y-1 text-xs mt-4">
       <div>
-        <h4 class="my-6 font-bold pl-4">Querys</h4>
-        <div class="space-y-3">
-          <div
-            class="pl-4 border-b border-orange-500 hover:text-orange-300 font-bold cursor-pointer"
-            (click)="setFile('landingQuery', 'graphql')"
-          >
+        <div class="space-y-1">
+          <div class="py-1 pl-4 border-b border-gray-700 hover:text-orange-300 font-bold cursor-pointer"
+            (click)="setFile('landingQuery', 'graphql')">
             landing<span class="text-orange-500">.graphql</span>
           </div>
-          <div
-            class="pl-4 border-b border-orange-500 hover:text-orange-300 font-bold cursor-pointer"
-            (click)="setFile('articlesQuery', 'graphql')"
-          >
+          <div class="py-1 pl-4 border-b border-gray-700 hover:text-orange-300 font-bold cursor-pointer"
+            (click)="setFile('articlesQuery', 'graphql')">
             articles<span class="text-orange-500">.graphql</span>
           </div>
-          <div
-            class="pl-4 border-b border-orange-500 hover:text-orange-300 font-bold cursor-pointer"
-            (click)="setFile('articleQuery', 'graphql')"
-          >
+          <div class="py-1 pl-4 border-b border-gray-600 hover:text-orange-300 font-bold cursor-pointer"
+            (click)="setFile('articleQuery', 'graphql')">
             article<span class="text-orange-500">.graphql</span>
           </div>
         </div>
       </div>
-      <div class="mt-3 mb-3">
-        <h4 class="my-12 mb-3 pl-4 font-bold">Templates</h4>
-        <div class="space-y-3">
-          <div
-            class="pl-4 border-b border-blue-500 hover:text-blue-300 font-bold cursor-pointer"
-            (click)="setFile('landingTemplate', 'html')"
-          >
+      <div class="">
+        <div class="space-y-1">
+          <div class="py-1 pl-4 border-b border-gray-700 hover:text-blue-300 font-bold cursor-pointer"
+            (click)="setFile('landingTemplate', 'html')">
             landing<span class="text-blue-500">.html</span>
           </div>
-          <div
-            class="pl-4 border-b border-blue-500 hover:text-blue-300 font-bold cursor-pointer"
-            (click)="setFile('articlesTemplate', 'html')"
-          >
+          <div class="py-1 pl-4 border-b border-gray-700 hover:text-blue-300 font-bold cursor-pointer"
+            (click)="setFile('articlesTemplate', 'html')">
             articles<span class="text-blue-500">.html</span>
           </div>
-          <div
-            class="pl-4 border-b border-blue-500 hover:text-blue-300 font-bold cursor-pointer"
-            (click)="setFile('articleTemplate', 'html')"
-          >
+          <div class="py-1 pl-4 border-b border-gray-700 hover:text-blue-300 font-bold cursor-pointer"
+            (click)="setFile('articleTemplate', 'html')">
             article<span class="text-blue-500">.html</span>
           </div>
         </div>
       </div>
-      <a
-        class="relative block ml-2 pt-6"
-        target="_blank"
-        rel="noopener noreferrer"
-        href="https://www.buymeacoffee.com/kushteam"
-        ><img
-          src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=kushteam&button_colour=FFDD00&font_colour=000000&font_family=Cookie&outline_colour=000000&coffee_colour=ffffff"
-      /></a>
+
+      <div class="border-t border-gray-800 border-b bottom-0 grid grid-cols-1  w-full  mb-1">
+        <a href="https://github.com/kush-team" target="_blank"
+          class="font-mono flex-col  flex justify-center text-center p-3 items-center font-bold  hover:bg-gray-800 text-white">
+          <div class="px-2" href="https://github.com/kush-team" target="_blank">
+            <img class="w-6 h-6" src="assets/GitHub-Mark-Light-32px.png" />
+          </div>
+          <span class="text-gray-100 leading-tight">Kush Team</span>
+        </a>
+        <a href="https://www.buymeacoffee.com/kushteam" target="_blank"
+          class="font-mono bg-orange-500 hover:bg-orange-600 flex-col flex justify-center text-center p-2 items-center font-bold  text-white">
+          <div class="px-2" href="https://www.buymeacoffee.com/kushteam" target="_blank">
+            <img class="w-6 h-6" src="https://cdn.buymeacoffee.com/buttons/bmc-new-btn-logo.svg" />
+          </div>
+          <span class="text-gray-900 leading-tight">Buy us a coffee</span>
+        </a>
+      </div>
+      
     </div>
   </div>
-  <div
-    class="w-full pt-8 bg-gray-900 pl-6 h-screen"
-    style="padding-top: 2.2rem; background: #1e1e1e"
-  >
-    <ngx-monaco-editor
-      style="height: 90%; width: 100%"
-      [options]="editorOptions"
-      [(ngModel)]="code"
-      automaticLayout="true"
-    ></ngx-monaco-editor>
+  <div class="w-full bg-gray-900 min-h-screen pt-12 overflow-hidden" style="background: #1e1e1e">
+    <ngx-monaco-editor style="height: 100%; width: 100%" [options]="editorOptions" [(ngModel)]="code"
+      automaticLayout="true"></ngx-monaco-editor>
   </div>
 </div>
